skiplang/compiler/invalid_tests/visibility/module_protected_class.sk
module M;

protected class Foo

module end;
